fixed arrow squishing on About page

--- a/client/src/styles/layout/_page.scss
+++ b/client/src/styles/layout/_page.scss
@@ -49,7 +49,6 @@
 @media (max-width: $breakpoint-mobile){
   .full-page {
     max-width: 90vw;
-    padding: 60px 5vw;
     min-height: calc(100vh - 120px);
   }
   .homepage-section {
