--- a/client/src/styles/layout/_side-bar.scss
+++ b/client/src/styles/layout/_side-bar.scss
@@ -10,6 +10,7 @@
   justify-content: center;
   height: 100vh;
   width: 10vw;
+  background-color: $background;
 
   ul {
     list-style: none;
